syntax = "proto3";
option go_package = "github.com/Nickromancer/DISYS-5/proto";

package proto;

service Auction 
{
    rpc Bid (Amount) returns (Ack);
    rpc Result (Empty) returns (Outcome);
}

service Replication
{
    rpc BidBackup (Amount) returns (Ack);
    rpc ResultBackup (Empty) returns (Outcome);
    rpc Ping (PingMessage) returns (PingMessage);
    rpc IsPrimaryServer (Empty) returns (PrimaryServerResponse);
}

message PrimaryServerResponse {
    bool primaryServer = 1;
}

message PingMessage {
    int32 Id = 1;
}

message Empty {
   
}

message Amount {
    int32 lamportTime = 1;
    int32 clientId = 2;
    int32 bidAmount = 3;
}

message Ack {
    enum RESULT {
        SUCCESS = 0;
        FAIL = 1;
        EXCEPTION = 2;
    }

    int32 lamportTime = 1;
    RESULT result = 2;
}

message Outcome {
    enum STATE {
        ONGOING = 0;
        FINISHED = 1;
        NOTSTARTED = 2;
    }
    STATE state = 1;
    int32 winnerId = 2;
    int32 winningBid = 3;
}